[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Player/PlayerAnchors.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Hook/Hook.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Player/LedgeDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Player/FloorDetector.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Player/Skin.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Player/Camera/CameraRig.gd" type="Script" id=6]
[ext_resource path="res://src/Player/Camera/ShakingCamera.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Combat/HitBox/HitBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Player/StateMachine.gd" type="Script" id=9]
[ext_resource path="res://src/Player/States/Move.gd" type="Script" id=10]
[ext_resource path="res://src/Player/States/Idle.gd" type="Script" id=11]
[ext_resource path="res://src/Player/States/Run.gd" type="Script" id=12]
[ext_resource path="res://src/Player/States/Air.gd" type="Script" id=13]
[ext_resource path="res://src/Player/States/Ledge.gd" type="Script" id=14]
[ext_resource path="res://src/Player/States/Hook.gd" type="Script" id=15]
[ext_resource path="res://src/Player/States/Debug.gd" type="Script" id=16]
[ext_resource path="res://src/Combat/Stats.tscn" type="PackedScene" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="Hook" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -30 )

[node name="LedgeDetector" parent="." instance=ExtResource( 3 )]

[node name="FloorDetector" parent="." instance=ExtResource( 4 )]

[node name="Skin" parent="." instance=ExtResource( 5 )]

[node name="CameraRig" type="Position2D" parent="."]
position = Vector2( 0, -30 )
script = ExtResource( 6 )

[node name="ShakingCamera" parent="CameraRig" instance=ExtResource( 7 )]
smoothing_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="HitBox" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -30 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Move" type="Node" parent="StateMachine"]
editor/display_folded = true
script = ExtResource( 10 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
editor/display_folded = true
script = ExtResource( 11 )

[node name="JumpDelay" type="Timer" parent="StateMachine/Move/Idle"]
wait_time = 0.1
one_shot = true

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 12 )

[node name="Air" type="Node" parent="StateMachine/Move"]
editor/display_folded = true
script = ExtResource( 13 )

[node name="JumpDelay" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.1
one_shot = true

[node name="Ledge" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Hook" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Debug" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="Stats" parent="." instance=ExtResource( 17 )]
